test/_generated-libs/undici/undici/errors/SecureProxyConnectionError.hx
package undici.errors;

@:jsRequire("undici", "errors.SecureProxyConnectionError") extern class SecureProxyConnectionError extends UndiciError {
	static var prototype : SecureProxyConnectionError;
}